--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,9 @@ body {
 }
 
 h1 {
-  margin-bottom: 16px;
-  font-size: 22px;
+  margin-bottom: 18px;
+  font-size: 24px;
+  font-weight: 700;
 }
 
 .card {
